--- a/upload/catalog/view/theme/default/template/account/layout.twig
+++ b/upload/catalog/view/theme/default/template/account/layout.twig
@@ -7,7 +7,7 @@
             {% endfor %}
         </ul>
     </nav>
-  <div class="row">{{ column_left }}
+  <div class="row pt-5">{{ column_left }}
     {% if column_left and column_right %}
     {% set class = 'col-sm-6' %}
     {% elseif column_left or column_right %}
