--- a/upload/catalog/view/theme/default/template/account/order_list.twig
+++ b/upload/catalog/view/theme/default/template/account/order_list.twig
@@ -28,14 +28,14 @@
         {% endfor %}
     </ul>
 
+    <div class="order_list row">
     {% if orders %}
             
-            <div class="order_list row">
                 
                 {% for order in orders %}
                     {{ order.html }}
                 {% endfor %}
-            </div>
+          
             
             <div class="d-flex align-items-center">
                 <div class="col-sm-6 text-left order_pagination">{{ pagination }}</div>
@@ -54,6 +54,7 @@
                 <div class="pull-right"><a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a></div>
                 </div>
     {% endif %}
+  </div>
 
 </div>
 
@@ -66,7 +67,7 @@
         buttons.forEach(button => {
             button.addEventListener('click', function() {
                     const category = this.getAttribute('data-category');
-    
+                    console.log(category)
                     document.querySelector('.order_list').innerHTML = `
                         <div class="row">
                         
@@ -89,13 +90,13 @@
                             if(html == '') {
                                 
                             document.querySelector('.order_list').innerHTML = `
-                            <div class="row">
-                            
-                                <p>
-                                هنوز هیچ سفارشی ندادید
-                                </p>
-                                
-                            </div>
+                             <div class="empty_order">
+                                <div><svg class="bi" fill="currentColor"><use xlink:href="#empty-order-icon"></use></svg></div>
+                                <p>{{ text_empty }}</p>
+                                </div>
+                                <div class="buttons clearfix">
+                                <div class="pull-right"><a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a></div>
+                                </div>
                             
                             `;
                             } else {
